--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "id": "68dee4ce6d867015739de565",
-  "logo": "https://i.ibb.co/k2GBrQ97/Photography-Icons-in-Blue-removebg-preview.png",
+  "logo": "https://i.ibb.co/XrcN8yMb/blob.webp",
   "store_name": null,
   "main_color": "#001637ff",
   "phone": "0776966433",
@@ -27,9 +27,5 @@
     "media": true,
     "titleText": "Thank you for your order!",
     "aboutText": "We will contact you soon. Have a nice day."
-  },
-  "facebookPixel": {
-    "name": "Eyegy",
-    "id": "Wgwgeg"
   }
 }
