--- a/src/config.json
+++ b/src/config.json
@@ -27,5 +27,9 @@
     "media": true,
     "titleText": "Thank you for your order!",
     "aboutText": "We will contact you soon. Have a nice day."
+  },
+  "facebookPixel": {
+    "name": "Sheh",
+    "id": "Wheheh"
   }
 }
