--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
   "id": "68dee4ce6d867015739de565",
   "logo": "https://i.ibb.co/XrcN8yMb/blob.webp",
-  "store_name": null,
+  "store_name": "Yacene shope",
   "main_color": "#001637ff",
   "phone": "0776966433",
   "repoName": "rrrr-nc",
@@ -31,5 +31,7 @@
   "facebookPixel": {
     "name": "Sheh",
     "id": "Wheheh"
-  }
+  },
+  "language": "ar",
+  "EnableBerue": false
 }
