--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
   "id": "68dee4ce6d867015739de565",
   "logo": "https://i.ibb.co/XrcN8yMb/blob.webp",
   "store_name": "Yacene shope",
-  "main_color": "#001637ff",
+  "main_color": "#00ffff",
   "phone": "0776966433",
   "repoName": "rrrr-nc",
   "facebook": "https://www.facebook.com/",
