--- a/src/config.json
+++ b/src/config.json
@@ -32,13 +32,5 @@
     "name": "Sheh",
     "id": "Wheheh"
   },
-  "language": "ar",
-  "EnableBerue": false,
-  "faqs": [
-    {
-      "question": "شربيري",
-      "answer": "توصيل مجاني و فرصة ربح ",
-      "id": "1759438595468"
-    }
-  ]
+  "language": "ar"
 }
